--- a/UI-UnitTests-iOSTests/Dashboard/DashboardMock.storyboard
+++ b/UI-UnitTests-iOSTests/Dashboard/DashboardMock.storyboard
@@ -9,6 +9,11 @@
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="TimesNewRomanBold.ttf">
+            <string>TimesNewRomanPS-BoldMT</string>
+        </array>
+    </customFonts>
     <scenes>
         <!--Navigation Controller-->
         <scene sceneID="C5p-gO-NgQ">
@@ -41,7 +46,7 @@
                                         <rect key="frame" x="0.0" y="0.0" width="55" height="30"/>
                                         <state key="normal" title="Sign In"/>
                                         <connections>
-                                            <segue destination="HEa-kD-vJB" kind="show" identifier="LoginSegueIdentifier" id="Qmp-gy-DaJ"/>
+                                            <segue destination="HEa-kD-vJB" kind="presentation" identifier="LoginSegueIdentifier" modalPresentationStyle="fullScreen" modalTransitionStyle="crossDissolve" id="Qmp-gy-DaJ"/>
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Gcg-Ot-sKD">
@@ -54,9 +59,9 @@
                                 </subviews>
                             </stackView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="UI-UnitTests-iOS" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Pkk-kD-v1W">
-                                <rect key="frame" x="122.5" y="114" width="130.5" height="20.5"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
+                                <rect key="frame" x="114" y="114" width="148.5" height="22.5"/>
+                                <fontDescription key="fontDescription" name="TimesNewRomanPS-BoldMT" family="Times New Roman" pointSize="20"/>
+                                <color key="textColor" red="1" green="0.0" blue="0.055564177690000001" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
@@ -88,7 +93,7 @@
         <!--Login-->
         <scene sceneID="rMP-xR-FyE">
             <objects>
-                <viewControllerPlaceholder storyboardName="Login" id="HEa-kD-vJB" sceneMemberID="viewController"/>
+                <viewControllerPlaceholder storyboardName="LoginMock" id="HEa-kD-vJB" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zyf-sZ-ms4" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="534" y="5"/>
