--- a/UI-UnitTests-iOS/Dashboard/Base.lproj/Dashboard.storyboard
+++ b/UI-UnitTests-iOS/Dashboard/Base.lproj/Dashboard.storyboard
@@ -34,23 +34,30 @@
         <!--Welcome-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController storyboardIdentifier="DashboardViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="BYZ-38-t0r" customClass="DashboardViewController" customModule="UI_UnitTests_iOS" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="DashboardViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="BYZ-38-t0r" customClass="DashboardViewController" customModule="UIUnitTestsIOS" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="100" translatesAutoresizingMaskIntoConstraints="NO" id="bEF-RI-1ZZ">
-                                <rect key="frame" x="152" y="285.5" width="70" height="160"/>
+                                <rect key="frame" x="141.5" y="220.5" width="91" height="290"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fcZ-ae-EwF">
-                                        <rect key="frame" x="0.0" y="0.0" width="70" height="30"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="91" height="30"/>
                                         <state key="normal" title="Calculator"/>
                                         <connections>
                                             <segue destination="HEa-kD-vJB" kind="presentation" identifier="CalculatorSegueIdentifier" modalPresentationStyle="fullScreen" modalTransitionStyle="crossDissolve" id="VSY-Le-GK1"/>
                                         </connections>
                                     </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="36W-i2-ca6">
+                                        <rect key="frame" x="0.0" y="130" width="91" height="30"/>
+                                        <state key="normal" title="Humor Faces"/>
+                                        <connections>
+                                            <segue destination="WvG-D7-73F" kind="show" identifier="HumorFacesSegueIdentifier" id="Ju3-zC-ACV"/>
+                                        </connections>
+                                    </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Gcg-Ot-sKD">
-                                        <rect key="frame" x="0.0" y="130" width="70" height="30"/>
+                                        <rect key="frame" x="0.0" y="260" width="91" height="30"/>
                                         <state key="normal" title="About"/>
                                         <connections>
                                             <action selector="aboutDidTouchUpInside:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ffm-qj-yCH"/>
@@ -77,10 +84,11 @@
                     <navigationItem key="navigationItem" title="Welcome" id="f1x-Lb-Uwe"/>
                     <connections>
                         <outlet property="aboutButton" destination="Gcg-Ot-sKD" id="BNP-xk-wEB"/>
-                        <outlet property="aboutHorizontalCenterConstraint" destination="3vG-up-jTb" id="Wxh-rr-41i"/>
-                        <outlet property="aboutStackView" destination="bEF-RI-1ZZ" id="wr8-SF-PS5"/>
-                        <outlet property="aboutVerticalCenterConstraint" destination="ULu-bv-4GC" id="zWo-hc-pep"/>
                         <outlet property="calculatorButton" destination="fcZ-ae-EwF" id="0qu-R1-Cu1"/>
+                        <outlet property="humorFacesButton" destination="36W-i2-ca6" id="KQ1-XU-Df2"/>
+                        <outlet property="stackView" destination="bEF-RI-1ZZ" id="wr8-SF-PS5"/>
+                        <outlet property="stackViewHorizontalCenterConstraint" destination="3vG-up-jTb" id="Wxh-rr-41i"/>
+                        <outlet property="stackViewVerticalCenterConstraint" destination="ULu-bv-4GC" id="zWo-hc-pep"/>
                         <outlet property="welcomeTitleHorizontalCenterConstraints" destination="0AA-Fz-bi4" id="HqN-hh-IkJ"/>
                         <outlet property="welcomeTitleLabel" destination="Pkk-kD-v1W" id="6I1-qa-eoy"/>
                         <outlet property="welcomeTitleTopConstraint" destination="tfi-VX-YBc" id="cLH-7G-4dW"/>
@@ -97,6 +105,14 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zyf-sZ-ms4" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="534" y="5"/>
+        </scene>
+        <!--HumorFaces-->
+        <scene sceneID="4rP-qB-pxe">
+            <objects>
+                <viewControllerPlaceholder storyboardName="HumorFaces" id="WvG-D7-73F" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="qqL-vz-yhF" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="525" y="312"/>
         </scene>
     </scenes>
 </document>
